kubernetes/namespaces/default/hastebin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hastebin
spec:
  selector:
    app: hastebin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7777
